# Kedro-Energy-Forecasting-Machine-Learning-Pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-requirements.txt  pyproject.toml  requirements.txt  session_store.db
.github/workflows/: code_quality.yml  code_quality_and_tests.yml  test_code.yml  test_code_docker.yml
conf/base/: catalog.yml  parameters_catboost_pipeline.yml  parameters_data_processing.yml  parameters_data_processing_pipeline.yml  parameters_feature_engineering_pipeline.yml  parameters_lightgbm_training_pipeline.yml  parameters_long_term_model_training.yml  parameters_model_training_pipeline.yml  parameters_random_forest_pipeline.yml  parameters_short_term_model_training.yml  parameters_short_term_model_training_pipeline.yml  parameters_train_test_split_pipeline.yml  parameters_xgboost_training_pipeline.yml
data/01_raw/: Sceaux 2009-08-01 to 2011-01-31.csv  weather_data_part1.csv
data/02_processed/: processed_weather_and_consumption_data.csv
data/03_training_data/: X_test_short_term_model.csv  X_train_short_term_model.csv  y_test_short_term_model.csv  y_train.csv
data/04_reporting/: created_features.json  created_features_list.json
data/05_model_output/: lightgbm_model.pkl  random_forest_model.pkl  short_term_random_forest_model.pkl  xgboost_model.pkl
data/05_model_output/xgboost/: xgboost_model.pkl
notebooks/: EDA & Data Preparation - Energy_Forecasting.ipynb  Machine Learning - Energy_Forecasting.ipynb
src/energy_forcasting_model/: __init__.py  __main__.py  pipeline_registry.py  settings.py
(+40 files in other folders)
